set(ASSET_FILES
	"audio/background/(Epic Pirate Battle Music) - Escaping The Kraken -.ogg"
	"audio/background/[No Copyright Music] Endless Storm - (Royalty Free Epic Battle Music).ogg"
	"audio/background/Dark Man by egmusic16.ogg"
	"audio/background/Epic Dark Battle Music - Escape [Powerful Fantasy Horror by Ebunny].ogg"
	"audio/background/EpicMusicOrchestraCinematicBattleMusicDragonCastlebySymphony(CopyrightFreeMusic).ogg"
	"audio/background/FirstGameSceneMusic - by Always Music.ogg"
	"audio/background/Glory by Whitesand.ogg"
	"audio/background/Guardians by Evan King.ogg"
	"audio/background/MenuSceneMusic - by AShamaluevMusic.ogg"
	"audio/background/Most Wondrous Battle Music Ever Light And Darkness.ogg"
	"audio/background/Singularity by Evan King.ogg"
	"audio/background/Smash Mouth - All Star _Official Music Video_.mp3"
	"audio/sound/Recruitment/Coin/coin.mp3"
	"audio/sound/Recruitment/Coin/coin2.mp3"
	"audio/sound/Recruitment/Coin/coin3.mp3"
	"audio/sound/TerrainWalk-sounds/Glass_Running.mp3"
	"audio/sound/TerrainWalk-sounds/Gravel_Jogging.mp3"
	"audio/sound/UI-sounds/accionBloqueada.mp3"
	"audio/sound/UI-sounds/attackCommand.mp3"
	"audio/sound/UI-sounds/attackConfirm.mp3"
	"audio/sound/UI-sounds/basic_click.mp3"
	"audio/sound/UI-sounds/button_click.mp3"
	"audio/sound/UI-sounds/coin.wav"
	"audio/sound/UI-sounds/hitPlayMenu.mp3"
	"audio/sound/UI-sounds/nextDialogue.wav"
	"audio/sound/UI-sounds/pauseButton.mp3"
	"audio/sound/UI-sounds/quitButton.mp3"
	"audio/sound/UI-sounds/skipDialogue.wav"
	"audio/sound/Unit-sounds/Heroes/Abeizhul/zapsplat_horror_monster_demon_screech_007_23967.mp3"
	"audio/sound/Unit-sounds/Heroes/Abeizhul/zapsplat_horror_monster_demon_screech_011_23971.mp3"
	"audio/sound/Unit-sounds/Heroes/Abeizhul/zapsplat_horror_monster_demon_screech_012_23972.mp3"
	"audio/sound/Unit-sounds/Heroes/Thassa/battleCrySound.mp3"
	"audio/sound/Unit-sounds/Heroes/Thassa/HeroicStrikeShout.mp3"
	"audio/sound/Unit-sounds/Heroes/Thassa/hittingwithHeroicStrike.mp3"
	"audio/sound/Unit-sounds/Heroes/Zamdran/ArrowRainSkill.mp3"
	"audio/sound/Unit-sounds/Monster/attack sound/shade1.mp3"
	"audio/sound/Unit-sounds/Monster/attack sound/shade10.mp3"
	"audio/sound/Unit-sounds/Monster/attack sound/shade11.mp3"
	"audio/sound/Unit-sounds/Monster/attack sound/shade12.mp3"
	"audio/sound/Unit-sounds/Monster/attack sound/shade13.mp3"
	"audio/sound/Unit-sounds/Monster/attack sound/shade14.mp3"
	"audio/sound/Unit-sounds/Monster/attack sound/shade15.mp3"
	"audio/sound/Unit-sounds/Monster/attack sound/shade2.mp3"
	"audio/sound/Unit-sounds/Monster/attack sound/shade3.mp3"
	"audio/sound/Unit-sounds/Monster/attack sound/shade4.mp3"
	"audio/sound/Unit-sounds/Monster/attack sound/shade5.mp3"
	"audio/sound/Unit-sounds/Monster/attack sound/shade6.mp3"
	"audio/sound/Unit-sounds/Monster/attack sound/shade7.mp3"
	"audio/sound/Unit-sounds/Monster/attack sound/shade8.mp3"
	"audio/sound/Unit-sounds/Monster/attack sound/shade9.mp3"
	"audio/sound/Unit-sounds/Monster/moving sound/slime1.mp3"
	"audio/sound/Unit-sounds/Monster/moving sound/slime10.mp3"
	"audio/sound/Unit-sounds/Monster/moving sound/slime2.mp3"
	"audio/sound/Unit-sounds/Monster/moving sound/slime3.mp3"
	"audio/sound/Unit-sounds/Monster/moving sound/slime4.mp3"
	"audio/sound/Unit-sounds/Monster/moving sound/slime5.mp3"
	"audio/sound/Unit-sounds/Monster/moving sound/slime6.mp3"
	"audio/sound/Unit-sounds/Monster/moving sound/slime7.mp3"
	"audio/sound/Unit-sounds/Monster/moving sound/slime8.mp3"
	"audio/sound/Unit-sounds/Monster/moving sound/slime9.mp3"
	"dialog/dialog1.txt"
	"dialog/dialog1transition.txt"
	"dialog/dialog2.txt"
	"dialog/dialog2transition.txt"
	"dialog/dialog3.txt"
	"dialog/dialog3transition.txt"
	"dialog/dialog4.txt"
	"dialog/dialog4transition.txt"
	"dialog/dialog5.txt"
	"dialog/dialog5transition.txt"
	"dialog/dialog6transition.txt"
	"fonts/AURORA.ttf"
	"fonts/Greenscr.ttf"
	"fonts/Retron2000.ttf"
	"images/red.JPG"
	"images/Logos/Logo.png"
	"images/Logos/Logo2.png"
	"images/Logos/VG.jpg"
	"images/MainMenu/Button1.png"
	"images/MainMenu/Button2.png"
	"images/MainMenu/Logo.png"
	"images/MainMenu/Options_Button.png"
	"images/MainMenu/Play_Button.png"
	"images/MainMenu/VG.jpg"
	"images/Maps/FifthBattle.png"
	"images/Maps/FirstBattle.png"
	"images/Maps/FourthBattle.png"
	"images/Maps/SecondBattle.png"
	"images/Maps/TestMap.png"
	"images/Maps/ThirdBattle.png"
	"images/Obstacles/BottomTruck.png"
	"images/Obstacles/Box.png"
	"images/Obstacles/Fence.png"
	"images/Obstacles/Rock.png"
	"images/Obstacles/TopTruck.png"
	"images/Obstacles/Torch.png"
	"images/Obstacles/Trees.png"
	"images/Pause/Button.png"
	"images/Pause/Exit_Button.png"
	"images/Pause/Fondo.png"
	"images/Pause/Panel.png"
	"images/Pause/Pause_Button.png"
	"images/Pause/Restart_Button.png"
	"images/Pause/Resume_Button.png"
	"images/Portraits/Archer.png"
	"images/Portraits/ArcherEnemy.png"
	"images/Portraits/characterPlaceholder.png"
	"images/Portraits/EvilValar.png"
	"images/Portraits/Knight.png"
	"images/Portraits/KnightEnemy.png"
	"images/Portraits/Mage.png"
	"images/Portraits/MageEnemy.png"
	"images/Portraits/Narrator.png"
	"images/Portraits/SoldierEnemy.png"
	"images/Portraits/Thassa.png"
	"images/Portraits/Valar.png"
	"images/Recruitment/accept_Button.png"
	"images/Recruitment/cancel_Button.png"
	"images/Recruitment/coin_rot_anim.png"
	"images/Recruitment/quantity_Button.png"
	"images/Recruitment/recruitment_Panel.png"
	"images/Recruitment/recruitment.png"
	"images/Recruitment/reward_Panel.png"
	"images/Transition/Transition_1.png"
	"images/Transition/Transition_2.png"
	"images/Transition/Transition_3.png"
	"images/Transition/Transition_4.png"
	"images/Transition/Transition_5.png"
	"images/Transition/Transition_6.png"
	"images/Tutorials/Continue_Button.png"
	"images/Tutorials/Next_Button.png"
	"images/Tutorials/tutorial_.png"
	"images/Tutorials/tutorial_1.png"
	"images/Tutorials/tutorial_2.PNG"
	"images/Tutorials/tutorial_3.PNG"
	"images/Tutorials/tutorial_4.PNG"
	"images/Tutorials/tutorial_5.PNG"
	"images/Tutorials/tutorial_6.png"
	"images/Tutorials/tutorial_7.PNG"
	"images/UI/ActiveSound.png"
	"images/UI/activeUnitCell.png"
	"images/UI/arrow_anim.png"
	"images/UI/arrow_Dialog.png"
	"images/UI/attack_up.png"
	"images/UI/battlecry_icon_disabled.png"
	"images/UI/battlecry_icon.png"
	"images/UI/cellFrame.png"
	"images/UI/cellHover.png"
	"images/UI/cellHoverBlue.png"
	"images/UI/cellHoverRed.png"
	"images/UI/cellInRange.png"
	"images/UI/circle.png"
	"images/UI/dialogueBackground.png"
	"images/UI/enemy_skill_disabled_icon.png"
	"images/UI/enemy_skill_icon.png"
	"images/UI/enemyInRange.png"
	"images/UI/extra.png"
	"images/UI/goldskull.png"
	"images/UI/green-check.png"
	"images/UI/healthBar_background.png"
	"images/UI/healthBar_blue.png"
	"images/UI/healthBar_damage.png"
	"images/UI/healthBar_life.png"
	"images/UI/heroic_strike_icon_disabled.png"
	"images/UI/heroic_strike_icon.png"
	"images/UI/MuteSound.png"
	"images/UI/OptionsMenu.png"
	"images/UI/portrait.png"
	"images/UI/rock_bar.png"
	"images/UI/skipButton.png"
	"images/UI/skipButtonT.png"
	"images/UI/skipTurnButton.png"
	"images/UI/speed_up.png"
	"images/UI/statDown.png"
	"images/UI/statUp.png"
	"images/UI/test.png"
	"images/UI/turnBar.png"
	"images/UI/tutorialBackground.png"
	"images/UI/unitBatallionCircle.png"
	"images/UI/unitBatallionCircle2.png"
	"images/UI/WhiteBox.png"
	"images/Units/Abeizhul.png"
	"images/Units/BlueArcher.png"
	"images/Units/BlueKnight.png"
	"images/Units/BlueMage.png"
	"images/Units/BlueMonster.png"
	"images/Units/BlueSoldier.png"
	"images/Units/BlueValar.png"
	"images/Units/Dreilay.png"
	"images/Units/RedArcher.png"
	"images/Units/RedKnight.png"
	"images/Units/RedMage.png"
	"images/Units/RedMonster.png"
	"images/Units/RedSoldier.png"
	"images/Units/RedValar.png"
	"images/Units/Sheissah.png"
	"images/Units/Thassa.png"
	"images/Units/Zamdran.png"
	"languages/en/dialogues.txt"
	"languages/es/dialogues.txt"
	"levels/credits.txt"
	"levels/level-1.txt"
	"levels/level-2.txt"
	"levels/level-3.txt"
	"levels/level-4.txt"
	"levels/level-5.txt"
	"tutorials/tutorials.txt"
)

foreach(resource ${ASSET_FILES})
	configure_file(${resource} assets/${resource} COPYONLY)
endforeach()

add_executable(Assets IMPORTED GLOBAL)
set_target_properties(Assets PROPERTIES IMPORTED_LOCATION ${CMAKE_CURRENT_BINARY_DIR}/assets/DO_NOT_USE)
